Uploaded image for project: 'Axis2-C'
  1. Axis2-C
  2. AXIS2C-548

Axis2C crashes when sending a content-type header without a '=' seperator for the charset

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 1.0.0
    • transport/http
    • None
    • Linux / Windows

    Description

      This is the content type that I have sent

      Content-Type:application/soap+xml;charset:UTF-8;

      Axis2C crashes in the axis2_http_transport_utils.c line 905.

      Attachments

        Activity

          People

            samisa Don Samisa Abeysinghe
            supun Supun Kamburugamuva
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: