Fixed the crash by fixing logic. AXIS2C-548